clean up brief readme

--- a/public/auth.html
+++ b/public/auth.html
@@ -7,10 +7,10 @@
 <body>
     <h1 id="waiting">Waiting...</h1>
     <div id="error"></div>
-    <script src="oidc-client.js"></script>
+    <script src="oidc-client.min.js"></script>
     <script>
-        //Oidc.Log.logger = console;
-        new Oidc.UserManager().signinRedirectCallback().then(function (user) {
+        Log.logger = console;
+        new UserManager().signinRedirectCallback().then(function (user) {
             if (user == null) {
                 document.getElementById("waiting").style.display = "none";
                 document.getElementById("error").innerText = "No sign-in request pending.";
