--- a/src/silent-renew.html
+++ b/src/silent-renew.html
@@ -7,7 +7,7 @@
 <body>
     <h1 id="waiting">Waiting...</h1>
     <div id="error"></div>
-    <script src="assets/oidc-client.min.js"></script>
+    <script src="oidc-client.min.js"></script>
     <script>
          new UserManager().signinSilentCallback();
     </script>
