--- a/src/silent-renew.html
+++ b/src/silent-renew.html
@@ -8,8 +8,6 @@
     <h1 id="waiting">Waiting...</h1>
     <div id="error"></div>
     <script src="oidc-client.min.js"></script>
-    <script>
-         new UserManager().signinSilentCallback();
-    </script>
+    <script src="silent-renew.js"></script>
 </body>
 </html>
